syntax = "proto3";
package intertx;

option go_package = "github.com/interchainberlin/ica/x/inter-tx/types";

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "ibc/core/client/v1/client.proto";
import "ibc/account/account.proto";

// Query defines the gRPC querier service.
service Query {
  rpc IBCAccountFromAddress(QueryIBCAccountFromAddressRequest) returns (QueryIBCAccountFromAddressResponse) {
    option (google.api.http).get =
      "/cosmos/ibc-account/v1beta1/ibc-account/{port}/{channel}/{account}";
  }
}

message QueryIBCAccountFromAddressRequest {
  option (gogoproto.equal) = false;
  option (gogoproto.goproto_getters) = false;

  string port = 1;
  string channel = 2;
  string address = 3;
}
 
message QueryIBCAccountFromAddressResponse {
  // account defines the account of the corresponding address.
  ibc.account.IBCAccount account = 1;
}

